--- a/Templates/_config.yml
+++ b/Templates/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://lucif3rr.github.io
-baseurl:           http://lucif3rr.github.io/Templates/
+url:              http://lucif3rr.github.io/Templates
+baseurl:          /
 
 author:
   name:           'Mark Otto'
