--- a/Templates/_config.yml
+++ b/Templates/_config.yml
@@ -10,8 +10,7 @@ title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://lucif3rr.github.io/Templates
-baseurl:          /
-BASE_PATH:        http://lucif3rr.github.io/Templates
+baseurl:          http://lucif3rr.github.io/Templates
 
 author:
   name:           'Mark Otto'
