--- a/Templates/_config.yml
+++ b/Templates/_config.yml
@@ -1,3 +1,5 @@
+baseurl:          /Template
+
 # Dependencies
 markdown:         redcarpet
 pygments:         true
@@ -10,7 +12,7 @@ title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              lucif3rr.github.io/Templates
-baseurl:          /
+
 
 author:
   name:           'Mark Otto'
