--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title:        Hyde
-tagline:      'Hyde, a Jekyll theme'
-description:  'An elegant open source and mobile first theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:          http://andhyde.com
-version:      1.1.1
-author:
-  name:       ''
-  email:      ''
+title:        OWTF
+tagline:      'Offensive Web Testing Framework'
+description:  'OWASP OWTF, the Offensive (Web) Testing Framework, is an OWASP+PTES-focused try to unite great tools and make pen testing more efficient, written mostly in Python'
+url:          http://owtf.org
+version:      0.45
+author:		  
+  name:       'Abraham Aranguren'
+  email:      'name.surname@owasp.org'
 markdown:     rdiscount
-permalink:    pretty
+permalink:    none
 pygments:     true
 paginate:     1
